<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="790dp"
    android:background="@drawable/fragment_form"
    tools:context=".DeliveryFragment">

    <View
        android:id="@+id/view"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/nav_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingRight="80dp">

            <LinearLayout
                android:id="@+id/receive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:text="@string/receive"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/count_number"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/receive_line"
                android:visibility="invisible"
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_marginTop="6dp"
                android:background="@color/gray_500" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/delivery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="8dp"
                    android:text="@string/delivery"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/count_number"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/delivery_line"
                android:visibility="invisible"
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_marginTop="6dp"
                android:background="@color/gray_500" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            >-->

<!--        </androidx.recyclerview.widget.RecyclerView>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/delivery_list_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                />

        </LinearLayout>





    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>